Before first look. Almost done.

--- a/thankYou.html
+++ b/thankYou.html
@@ -2,9 +2,24 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Zahvaljujemo se vam...</title>
+    <link rel="stylesheet" type="text/css" href="css/cssreset.css">
+    <link rel="stylesheet" type="text/css" href="fonts/style_wb.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-Thank You.
+<header>
+    <h1>Zahvaljujemo se vam za vnesene podatke</h1>
+    <hr>
+</header>
+
+<article class="thankYou">
+
+    <h2 class="thankYou">
+        Na kontaktni e-naslov smo vam poslali elektronsko sporočilo, v katerem vas prosimo, da podatke preverite in potrdite.
+    </h2>
+
+</article>
+
 </body>
 </html>
