--- a/formDataBusiness.html
+++ b/formDataBusiness.html
@@ -21,30 +21,30 @@
 
                 <div>
                     <h3>Vpišite davčno številko podjetja za katerega želite urejati podatke</h3>
-                    <input type="text" id="taxNum" name="taxNum" size="60" value="" placeholder="Vpišite davčno številko (Obvezno)" />
+                    <input type="text" id="taxNum" class="input450px" name="taxNum" size="60" value="" placeholder="Vpišite davčno številko (Obvezno)" />
                     <div id="searchForCompany" class="button buttonLeftMargin smaller">Poišči</div>
 
                     <h4>V seznamu rezultatov so prikazane vse vpisane enote podjetja.<br>
                         Izberite enoto, ki jo želite urejati ali za nov vpis izberite vpis nove poslovne enote.</h4>
                     <select id="businessUnit" name="businessUnit">
                         <option value="0" selected>Poslovne enote</option>
-                        <option value="1">VPIS NOVE</option>
-                        <option value="2">enota 1</option>
-                        <option value="3">enota 2</option>
-                        <option value="4">enota 3</option>
+                        <option value="1">enota 1</option>
+                        <option value="2">enota 2</option>
+                        <option value="3">enota 3</option>
+                        <option value="4">VPIS NOVE</option>
                     </select>
                     <hr class="lineMarginTop lineMarginBottom">
                 </div>
                 <div id="mainFormBusiness">
                     <h3>Podatki o poslovni enoti</h3>
-                    <input type="text" id="companyNumber" name="companyNumber" size="60" value="" placeholder="Matična številka (Obvezno)" />
-                    <input type="text" id="companyName" name="companyName" size="60" value="" placeholder="Naziv matičnga podjetja (Obvezno)" />
-                    <input type="text" id="cityNumber" name="cityNumber" size="60" value="" placeholder="Poštna številka in kraj pošte (Obvezno)" />
-                    <input type="text" id="city" name="city" size="60" value="" placeholder="Kraj (Obvezno)" />
-                    <input type="text" id="street" name="street" size="60" value="" placeholder="Ulica in hišna številka (Obvezno)" />
+                    <input type="text" id="companyNumber" class="input450px" name="companyNumber" size="60" value="" placeholder="Matična številka (Obvezno)" />
+                    <input type="text" id="companyName" class="input450px" name="companyName" size="60" value="" placeholder="Naziv matičnga podjetja (Obvezno)" />
+                    <input type="text" id="cityNumber" class="input450px" name="cityNumber" size="60" value="" placeholder="Poštna številka in kraj pošte (Obvezno)" />
+                    <input type="text" id="city" class="input450px" name="city" size="60" value="" placeholder="Kraj (Obvezno)" />
+                    <input type="text" id="street" class="input450px" name="street" size="60" value="" placeholder="Ulica in hišna številka (Obvezno)" />
 
                     <h3>Vpišite kontaktne podatke, ki jih želite objaviti</h3>
-                    <input type="text" id="phoneNumber1" name="phoneNumber1" size="60" value="" placeholder="Telefon 1 (Obvezno)" /><br>
+                    <input type="text" id="phoneNumber1" class="input450px" name="phoneNumber1" size="60" value="" placeholder="Telefon 1 (Obvezno)" /><br>
                     <select id="whereToPublish1" name="whereToPublish1">
                         <option value="0" selected>Vpis v vse imenike TSmedie</option>
                         <option value="1">Samo ITIS</option>
@@ -69,7 +69,7 @@
                             <p class="callMode">Prepoved klicev: Vas nadlegujejo razni anketarji in prodajalci izdelkov po telefonu, iskalci vaših mnenj? Naredite temu konec! Odločite se za prepoved klicev v komercialni ali raziskovalni namen ali za kar oba. Več o tem na http://www.itis.si/prepoved_klicev.</p>
                         </a>
                     </div>
-                    <input type="text" id="phoneNumber2" name="phoneNumber2" size="60" value="" placeholder="Telefon 2" /><br>
+                    <input type="text" id="phoneNumber2" class="input450px" name="phoneNumber2" size="60" value="" placeholder="Telefon 2" /><br>
                     <select id="whereToPublish2" name="whereToPublish2">
                         <option value="0" selected>Vpis v vse imenike TSmedie</option>
                         <option value="1">Samo ITIS</option>
@@ -94,10 +94,10 @@
                             <p class="callMode">Prepoved klicev: Vas nadlegujejo razni anketarji in prodajalci izdelkov po telefonu, iskalci vaših mnenj? Naredite temu konec! Odločite se za prepoved klicev v komercialni ali raziskovalni namen ali za kar oba. Več o tem na http://www.itis.si/prepoved_klicev.</p>
                         </a>
                     </div>
-                    <input type="text" id="email" name="email" size="60" value="" placeholder="E-pošta" />
-                    <input type="text" id="webAddress" name="webAddress" size="60" value="" placeholder="Spletni naslov" />
-                    <input type="text" id="workPosition" name="workPosition" size="60" value="" placeholder="Delovno mesto" />
-                    <p>V primeru, da imate zahtevo za spremembo večej količine podatkov, nam lahko spremembe pošljete na imenik@tsmedia.si, lahko pa nas tudi pokličete na 080 15 70, in sicer vsak delovnik med 8. in 15. uro, kjer vam bomo z veseljem pomagali in poskrbeli za pravilno objavo vaših podatkov.
+                    <input type="text" id="email" class="input450px" name="email" size="60" value="" placeholder="E-pošta" />
+                    <input type="text" id="webAddress" class="input450px" name="webAddress" size="60" value="" placeholder="Spletni naslov" />
+                    <input type="text" id="workPosition" class="input450px" name="workPosition" size="60" value="" placeholder="Delovno mesto" />
+                    <p>V primeru, da imate zahtevo za spremembo večje količine podatkov, nam lahko spremembe pošljete na <a href="mailto:imenik@tsmedia.si">imenik@tsmedia.si</a>, lahko pa nas tudi pokličete na 080 15 70, in sicer vsak delovnik med 8. in 15. uro, kjer vam bomo z veseljem pomagali in poskrbeli za pravilno objavo vaših podatkov.
 
                     <hr class="lineMarginTop lineMarginBottom">
 
@@ -132,28 +132,28 @@
                     <hr class="lineMarginTop lineMarginBottom">
 
                     <h3>Vpišite ali preverite pravilnost e-pošte, da vam bomo lahko poslali potrditev o vpisu</h3>
-                    <input type="text" id="firstName" name="firstName" size="60" value="" placeholder="Ime (Obvezno)" />
-                    <input type="text" id="lastName" name="lastName" size="60" value="" placeholder="Priimek (Obvezno)" />
-                    <input type="text" id="contactPhome" name="contactPhome" size="60" value="" placeholder="Telefon (Obvezno)" />
-                    <input type="text" id="contactEmail" name="contactEmail" size="60" value="" placeholder="E-naslov (Obvezno)" />
+                    <input type="text" id="firstName" class="input450px" name="firstName" size="60" value="" placeholder="Ime (Obvezno)" />
+                    <input type="text" id="lastName" class="input450px" name="lastName" size="60" value="" placeholder="Priimek (Obvezno)" />
+                    <input type="text" id="contactPhome" class="input450px" name="contactPhome" size="60" value="" placeholder="Telefon (Obvezno)" />
+                    <input type="text" id="contactEmail" class="input450px" name="contactEmail" size="60" value="" placeholder="E-naslov (Obvezno)" />
                     <div class="checkYourData clearFix">
                         <div class="inputFields">
-                            <textarea id="comment" name="comment" cols="50" rows="5" placeholder="Opomba" ></textarea>
+                            <textarea id="comment" class="input430px" name="comment" cols="50" rows="5" placeholder="Opomba" ></textarea>
                             <label>
                                 <input type="checkbox" id="iAgree" name="iAgree" value="true" />
                                 Strinjam se s splošnimi pogoji o uporabi Telefonskega imenika Slovenije na raznih medijih, ki so objavljeni na spletni strani
-                                <a href="#">http://www.tsmedia.si/splosni-pogoji/</a>
+                                <a href="http://www.tsmedia.si/splosni-pogoji/">http://www.tsmedia.si/splosni-pogoji/</a>
                             </label>
                         </div>
                         <div class="infoText">
                             <h4>Opozorilo</h4>
-                            <p>V primeru nedovoljenega klica si zapišite predvsem kdaj in zakaj ter posredujte prijavo Tržnemu inšpektoratu RS.Prijavo lahko oddate tukaj!</p>
-                            <p>Link na Uradni list ZEKOM-1 (150, 232 člen) lahko preberete tukaj!</p>
-                            <p>Mnenje informacijske pooblaščenke lahko najdete tukaj!</p>
+                            <p>V primeru nedovoljenega klica si zapišite predvsem kdaj in zakaj ter posredujte prijavo <strong>Tržnemu inšpektoratu RS</strong>.Prijavo lahko oddate <a href="http://www.akos-rs.si/resevanje-uporabniskih-sporov" target="_blank">tukaj!</a></p>
+                            <p>Link na Uradni list ZEKOM-1 (150, 232 člen) lahko preberete <a href="http://www.uradni-list.si/1/objava.jsp?urlid=2012109&stevilka=4315">tukaj!</a></p>
+                            <p>Mnenje informacijske pooblaščenke lahko najdete <a href="https://www.ip-rs.si/varstvo-osebnih-podatkov/iskalnik-po-odlocbah-in-mnenjih/odlocbe-in-mnenja-varstvo-osebnih-podatkov/?tx_jzvopdecisions_pi1%5BshowUid%5D=2312&cHash=8aaa82e6172fbfc94c9c3a8f2a1ee440">tukaj!</a></p>
 
                             <h4>Pomoč pri izpolnjevanju</h4>
                             <p>T: 080 15 70 (delovnik 8:00 do 15:00 ure)</p>
-                            <p>E: imenik@tsmedia.si</p>
+                            <p>E: <a href="mailto:imenik@tsmedia.si">imenik@tsmedia.si</a></p>
                         </div>
                     </div>
 
